src/objects/Clinical_Procedure__c.object
<CustomObject>
    <fields>
        <fullName>ADA_Code__c</fullName>
        <label>ADA Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_Tooth_Selection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Tooth Selection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assistants_Needed__c</fullName>
        <label>Assistants Needed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Center_Information__c</fullName>
        <label>Center Information</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Clinical Procedures</relationshipLabel>
        <relationshipName>Clinical_Procedures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Default_Teeth_Selection__c</fullName>
        <label>Default Teeth Selection</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctor_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Doctor Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insurance_Fee__c</fullName>
        <label>Insurance Fee</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Markup_Max__c</fullName>
        <label>Markup Max</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Markup_Min__c</fullName>
        <description>%</description>
        <label>Markup Min</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Procedure_Description__c</fullName>
        <label>Procedure Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Procedure_Filter__c</fullName>
        <label>Procedure Filter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prosth</fullName>
                </value>
                <value>
                    <fullName>Surgical</fullName>
                </value>
                <value>
                    <fullName>Misc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Required__c</fullName>
        <description>in minutes</description>
        <label>Time Required</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isactive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isactive</label>
        <type>Checkbox</type>
    </fields>
    <label>Clinical Procedure</label>
    <nameField>
        <label>Clinical Procedure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clinical Procedures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>